--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
+    "@ngneat/spectator": "^10.0.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^12.11.1",
     "jest": "^27.4.7",
